AC_INIT(lisp/gnus.el)
AC_SET_MAKE
AC_PROG_INSTALL

dnl
dnl Apparently, if you run a shell window in Emacs, it sets the EMACS
dnl environment variable to 't'.  Lets undo the damage.
dnl
if test "${EMACS}" = "t"; then
   EMACS=""
fi

AC_ARG_WITH(xemacs,[  --with-xemacs           Use XEmacs to build], 
	[ if test "${withval}" = "yes"; then EMACS=xemacs; else EMACS=${withval}; fi ])
AC_ARG_WITH(emacs,[  --with-emacs            Use Emacs to build], 
	[ if test "${withval}" = "yes"; then EMACS=emacs; else EMACS=${withval}; fi ])
AC_CHECK_PROG(MAKEINFO, makeinfo, makeinfo, no)

AC_CHECK_PROG(EMACS, emacs, emacs, xemacs)

AC_PATH_LISPDIR
AC_PATH_ETCDIR
AC_PATH_INFO_DIR
AC_CHECK_URL
AC_CHECK_W3
AC_SET_BUILD_FLAGS
GNUS_CHECK_FONTS

AC_OUTPUT(Makefile etc/Makefile lisp/Makefile texi/Makefile texi/gnusconfig.tex texi/ps/Makefile)

ifelse(dnl	Do not change this comment
   arch-tag: 4fda042e-c632-45be-867f-4d90bc87746b
)dnl
